--- a/templates/results.html
+++ b/templates/results.html
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <main class="px-3 container h-100">
+    <main class="px-3">
         <div class="row text-center">
             <h1>Results</h1>
         </div>
